info items and key milestones container alignment fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -237,6 +237,17 @@ img {
   box-shadow: 0px 4px 4px rgb(0 0 0 / 8%);
   border-radius: 12px;
 }
+.statsContainerDetailPage {
+  margin-top: -160px;
+  background: $primary-white;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 8%);
+  border-radius: 12px;
+}
+@media (max-width: 768px) {
+  .statsContainerDetailPage {
+    margin-top: -200px;
+  }
+}
 
 .imgbgBox {
   position: absolute;
